--- a/src/scss/_page-home.scss
+++ b/src/scss/_page-home.scss
@@ -66,6 +66,7 @@
         border-radius: 4px;
         margin-left: 8px;
         text-transform: uppercase;
+        white-space: nowrap;
 
         &.project-badge-alpha {
             @include badge-variant($danger);
